Conform to Java 17